button top scroll

--- a/trim/index.html
+++ b/trim/index.html
@@ -801,7 +801,12 @@
 
 
   <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+  <div id="ftco-loader" class="show fullscreen">
+    <svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/>
+    </svg>
+</div>
          
         <!-- OffCanvas Menu Start -->
                 <aside class="offcanvas-navigation" id="offcanvasnav">
@@ -862,6 +867,12 @@
             <!-- Global Overlay Start -->
             <div class="global-overlay"></div>
             <!-- Global Overlay -->
+
+        <!--Scroll to Top Start -->
+        <a href="#" class = "scroll-to-top">
+            <i class="icon-angle-double-up"></i>
+        </a>
+        <!--Scroll to Top END -->
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
