--- a/trim/index.html
+++ b/trim/index.html
@@ -105,12 +105,11 @@
     <!-- END nav -->
     
     <!-- Header Slide Parallax-->
-    <div class="hero-wrap js-fullheight" data-speed="0.2" data-image-src='images/2.jpg' data-parallax="scroll">
+    <div class="hero-wrap js-fullheight" data-speed="0.2" data-image-src='images/2.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
       <div class="overlay"></div>
       
       <div class="container">
-        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true" 
-                            data-stellar-ratio="0.6">
+        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true" >
         	<a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
         		<span class="icon-play"></a>
         	</a>
