--- a/trim/gallery.html
+++ b/trim/gallery.html
@@ -74,7 +74,7 @@
 	    	</div>
 	    	<div class="container-wrap">
 	    		<div class="row no-gutters">
-						<div class="col-md-3 ftco-animate">
+						<div class="col-md-3 ">
 							<a href="images/gallery-1.jpg" class="gallery img image-popup d-flex align-items-center" style="background-image: url(images/gallery-1.jpg);">
 								<div class="icon mb-4 d-flex align-items-center justify-content-center">
       						<span class="icon-search"></span>
