--- a/trim/about.html
+++ b/trim/about.html
@@ -441,36 +441,36 @@
                   
                   <div class="col-md-4 col-6 col-sm-6 ftco-animate">
 	          			<div class="blog-entry ">
-	              				<img src="img/7.png">
+	              				<img class="img-fluid" src="img/7.png">
 	            		</div>
 	          		</div>
 	           	<div class="col-md-4 col-6 col-sm-6 ftco-animate">
 	          		<div class="blog-entry ">
-	              		<img src="img/8.png">
+	              		<img class="img-fluid" src="img/8.png">
 	            </div>
 	          </div>
 
 	           <div class="col-md-4 col-6 col-sm-6 ftco-animate">
 	          		<div class="blog-entry">
-	              		<img src="img/9.png">
+	              		<img class="img-fluid" src="img/9.png">
 	            </div>
 	          </div>
 
 	           <div class="col-md-4  col-6  col-sm-6 ftco-animate">
 	          	<div class="blog-entry">
-	              <img src="img/10.png">  
+	              <img class="img-fluid" src="img/10.png">  
 	            </div>
 	          </div>
 	           
 	           <div class="col-md-4 col-6 col-sm-6 ftco-animate">
 	          	<div class="blog-entry">
-	              <img src="img/11.png">  
+	              <img class="img-fluid" src="img/11.png">  
 	            </div>
 	          </div>
 
 	           <div class="col-md-4 col-6 col-sm-6 ftco-animate">
 	          	<div class="blog-entry">
-	             <img src="img/12.png"> 
+	             <img class="img-fluid" src="img/12.png"> 
 	            </div>
 	          </div>
 
