--- a/trim/index.html
+++ b/trim/index.html
@@ -63,7 +63,7 @@
                                       
                                     </li>
                                      <li class="nav-item has-children">
-                                        <a href="gallery.html" class="nav-link">
+                                        <a href="catalog.html" class="nav-link">
                                             <i class="icon-chevron-down"></i>
                                                 Каталог
                                         </a>
@@ -187,7 +187,7 @@
 
             <div class="container-wrap">
                 <div class="row no-gutters justify-content-center align-items-center">
-                    <div class="col-md-3 ftco-animate items">
+                    <div class="col-6 col-md-3 ftco-animate items">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/1.jpg">
@@ -202,7 +202,7 @@
                         
                     </div>
 
-                    <div class="col-md-3 ftco-animate items ">
+                    <div class="col-6 col-md-3 ftco-animate items ">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/1.jpg">
@@ -213,7 +213,7 @@
                         </div>  
                     </div>
 
-                     <div class="col-md-3 ftco-animate items ">
+                     <div class="col-6 col-md-3 ftco-animate items ">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/1.jpg">
@@ -224,7 +224,7 @@
                         </div>  
                     </div>
 
-                    <div class="col-md-3 ftco-animate items">
+                    <div class="col-6 col-md-3 ftco-animate items">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/2.jpg">
@@ -236,7 +236,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 ftco-animate items">
+                    <div class="col-6 col-md-3 ftco-animate items">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/2.jpg">
@@ -248,7 +248,7 @@
                         </div>
                     </div>
 
-                     <div class="col-md-3  ftco-animate items">
+                     <div class="col-6 col-md-3  ftco-animate items">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/2.jpg">
@@ -262,7 +262,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3  ftco-animate items">
+                    <div class="col-6 col-md-3  ftco-animate items">
                         <div class="item">
                             <a href="#">
                                 <img class="img-responsive" src="img/11.jpg">
@@ -275,7 +275,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3  ftco-animate items">
+                    <div class="col-6 col-md-3  ftco-animate items">
                         <div class="item">
                             <a href="#" class="">
                                 <img class="img-responsive" src="img/11.jpg">
@@ -289,7 +289,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3   ftco-animate items">
+                    <div class="col-6 col-md-3   ftco-animate items">
                         <div class="item">
                             <a href="#" class="">
                                 <img class="img-responsive" src="img/4.jpg">
@@ -302,7 +302,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3  ftco-animate items">
+                    <div class="col-6 col-md-3  ftco-animate items">
                         <div class="item">
                             <a href="#" class="">
                                 <img class="img-responsive" src="img/3.jpg">
@@ -315,7 +315,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3  ftco-animate items">
+                    <div class="col-6 col-md-3  ftco-animate items">
                         <div class="item">
                             <a href="#" >
                                 <img  src="img/5.jpg">
