--- a/trim/index.html
+++ b/trim/index.html
@@ -178,9 +178,12 @@
  <section class="ftco-gallery ftco-bg-dark">
             <div class="container">
                 <div class="row  justify-content-center">
-                    <div class="col-md-10 text-center ftco-animate">
-                        <h2>Каталог проектов</h2>
-                        <p>Современный дизайн, надежные материалы и качество - залог нашего успеха</p>
+                    <div class="row justify-content-center mb-5 pb-3">
+                        <div class="col-md-10 heading-section ftco-animate text-center">
+                            <h2 class="mb-4">Каталог проектов</h2>
+                            <p class="flip"><span class="deg1"></span><span class="deg2"></span><span class="deg3"></span></p>
+                            <p class="mt-5">Современный дизайн, надежные материалы и качество - залог нашего успеха</p>
+                        </div>
                     </div>
                 </div>
             </div>
