--- a/trim/services.html
+++ b/trim/services.html
@@ -270,7 +270,7 @@
 	          </div> <!-- .col-md-8 -->
 
 
-	          <div class="col-md-4 sidebar ftco-animate">
+	          <div class="col-md-4 sidebar ftco-animate sidebar-1">
 	            
 	            <div class="sidebar-box ftco-animate">
 	              <div class="">
@@ -306,6 +306,7 @@
 	            <div class="sidebar-box ftco-animate">
 	              <div class="categories">
 	                <h3>Каталог</h3>
+					  <ul>
 	                <li><a href="#">Кухни <span>(12)</span></a></li>
 	                <li><a href="#">Шкафы <span>(22)</span></a></li>
 	                <li><a href="#">Комоды <span>(37)</span></a></li>
@@ -313,6 +314,7 @@
 	                <li><a href="#">Прихожие <span>(14)</span></a></li>
 	                <li><a href="#">Лофт <span>(140)</span></a></li>
 	                <li><a href="#">Офисная мебель <span>(140)</span></a></li>
+					  </ul>
 	              </div>
 	            </div>
 				
