--- a/trim/catalog.html
+++ b/trim/catalog.html
@@ -127,7 +127,7 @@
 			           		<div class="border-a ftco-animate items blog-entry">
 
 								<div class="item-img text-center">
-				           				<a href="#" >
+				           				<a href="single-catalog.html" >
 				           					<img  class="img-fluid" src="img/1.jpg">
 				           				</a>
 								</div>
@@ -141,7 +141,7 @@
 											<div>Sept 10, 2018</div>
 										</div>
 				           				<h2 class="heading mt-2">
-											<a href="#">Кухня 1212 Кухня 1212 Кухня 1212</a>
+											<a href="single-catalog.html">Кухня 1212 Кухня 1212 Кухня 1212</a>
 										</h2>
 								</div>
 
@@ -151,7 +151,7 @@
 			           	<div class="col-6 col-md-6  mb-3 w-5">
 			           		<div class="border-a ftco-animate items blog-entry">
 				           			<div class="item-img text-center">
-					           			<a href="#" >
+					           			<a href="single-catalog.html" >
 					           				<img class="img-fluid" src="img/2.jpg">
 					           			</a>
 				           			</div>
@@ -164,7 +164,7 @@
 										<div>Sept 10, 2018</div>
 									</div>
 									<h2 class="heading mt-2">
-										<a href="#">Кухня 1212 Кухня 1212 Кухня 1212</a>
+										<a href="single-catalog.html">Кухня 1212 Кухня 1212 Кухня 1212</a>
 									</h2>
 								</div>
 
@@ -180,7 +180,7 @@
 
 
 				           			<div class="item-img  text-center">
-				           				<a href="#" >
+				           				<a href="single-catalog.html" >
 				           					<img  class="img-fluid" src="img/3.jpg">
 				           				</a>
 				           			</div>
@@ -192,7 +192,7 @@
 										<div>Sept 10, 2018</div>
 									</div>
 									<h2 class="heading mt-2">
-										<a href="#">Комод ЛОФТ</a>
+										<a href="single-catalog.html">Комод ЛОФТ</a>
 									</h2>
 								</div>
 
