--- a/trim/single-catalog.html
+++ b/trim/single-catalog.html
@@ -134,12 +134,11 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-md-8  ftco-animate">
-
+    <div class="container-wrap">
+        <div class="row no-gutters justify-content-center">
+            <div class="col-md-6  ftco-animate">
                 <div class="fotorama p-3"
-                     data-allowfullscreen="native" data-nav="thumbs" data-autoplay="true"  data-transition="slide">
+                     data-allowfullscreen="native" data-nav="thumbs" data-autoplay="true"  data-transition="slide" data-width="100%" data-minheight="300px">
                     <img class="img-fluid" src="img/1.jpg" >
                     <img class="img-fluid" src="img/2.jpg">
                     <img class="img-fluid" src="img/6.jpg">
@@ -147,10 +146,10 @@
                     <img class="img-fluid" src="img/4.jpg">
                 </div>
             </div>
-            <div class="col-md-4 p-3">
+            <div class="col-md-3 p-3">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-md-12  ftco-animate">
+                        <div class="col-md-12  ftco-animate text-center">
                             <h4>Краткое описание</h4>
                         </div>
                         <div class="col-md-12 p-3 ftco-animate desc">
@@ -177,7 +176,6 @@
 
 <section>
     <div class="container-wrap">
-
         <!--БЛОК FEEDBACK для PAGE описания услуг -->
         <div class="ftco-bg-dark p-3 ftco-animate">
             <div class="container">
@@ -219,12 +217,6 @@
 
     </div>
 </section>
-
-
-
-
-
-
 
 <!-- ПОСЛЕДНИЕ НОВОСТИ -->
 <section class="ftco-section">
@@ -296,16 +288,6 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
 
 <footer class="ftco-footer ftco-section img">
     <div class="overlay"></div>
@@ -397,12 +379,8 @@
     </div>
 </footer>
 
-
-
-
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
 
 <!-- OffCanvas Menu Start -->
 <aside class="offcanvas-navigation" id="offcanvasnav">
@@ -414,12 +392,8 @@
         <div class="offcanvas-navigation__top">
             <ul class="offcanvas-menu">
                 <li class="nav-item" >
-
                     <a href="index.html" >Главная</a>
-
                 </li>
-
-
                 <li class="nav-item"><a href="about.html" >О компании</a></li>
                 <li class="nav-item has-children" >
                                             <span class="menu-expand">
