--- a/trim/index.html
+++ b/trim/index.html
@@ -115,9 +115,7 @@
       
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true" >
-            <a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
-                <span class="icon-play"></a>
-            </a>
+
           <div class="col-md-6 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
               	<p class="mb-3 namefirm" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
                     <i class="icon-quote-left"></i>
@@ -125,10 +123,18 @@
                     <i class="icon-quote-right"></i>
                 </p>
             <h1 class="mb-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Изготовление корпусной мебели под заказ </h1>
-                <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+                <p>
                     <a href="catalog.html" class="btn btn-primary px-4 py-3">Каталог проектов</a>
                 </p>
           </div>
+            <div class="col-md-6 d-flex justify-content-center align-items-center ftco-animate">
+                <div>
+                    <a href="#" class="icon d-flex justify-content-center align-items-center">
+                        <span class="icon-phone2"></span>
+                    </a>
+                </a>
+                </div>
+            </div>
         </div>
       </div>
     </div>
