--- a/trim/about.html
+++ b/trim/about.html
@@ -259,8 +259,8 @@
 						<div class="col-md-7 text-center discount ftco-animate" data-scrollax=" properties: { translateY: '-30%'}">
 							<h3>Современное направление</h3>
 							<h2 class="mb-4">Мебель в стиле ЛОФТ</h2>
-							<p class="mb-4">Основные материалы дизайна – металл, дерево и стекло.</p>
-							<h4>Наша фирма имеет опыт изготовления данной мебели. Мы готовы реализовать ваши желания</h4>
+							<p class="mb-4" style="color: #d6d3d3;">Основные материалы дизайна – металл, дерево и стекло.</p>
+							
 							<p><a href="#" class="btn btn-primary px-4 py-3">Подробнее</a></p>
 						</div>
 					</div>
