--- a/trim/index.html
+++ b/trim/index.html
@@ -599,7 +599,7 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row justify-content-center p-5" >
-                <div class="col-md-7 text-center discount align-items-center p-5" >
+                <div class="col-md-7 text-center discount align-items-center small" >
                     <h3>Современное направление</h3>
                     <h2 class="mb-4">Мебель в стиле ЛОФТ</h2>
                     <p class="mb-4">Основные материалы дизайна – металл, дерево и стекло.</p>
@@ -786,8 +786,8 @@
             <div class="overlay"></div>
             <div class="container">
                 <div class="row justify-content-center p-5">
-                    <div class="col-md-10 text-center discount p-5 " >
-                        <h2 class="mb-8">Искусственный камень</h2>
+                    <div class="col-md-12 text-center discount align-items-center p-5 small">
+                        <h2 class="mb-4 h2-small">Искусственный камень</h2>
                         <p class="mb-4">Изделия из искуссвенного камня на кухне и в интерьере</p>
                         <p>
                             <a href="#" class="btn btn-primary px-4 py-3">Подробнее</a>
@@ -797,8 +797,8 @@
             </div>
         </div>
     </section>
-    
 
+    
 
 		
 <!-- ПОСЛЕДНИЕ НОВОСТИ -->
