--- a/trim/catalog.html
+++ b/trim/catalog.html
@@ -114,7 +114,16 @@
     <!-- End Header Slide Parallax -->
 
 	    <section class="ftco-section ftco-degree-bg">
-	      
+			<div class="container">
+				<div class="row ftco-animate">
+					<div class="col-md-12 no-gutters mb-3 ftco-animate breadcrumbs-custom">
+						<div class="pt-3 pb-3 ">
+							<span><a href="index.html">Главная</a> / </span>
+							<span>Каталог</span>
+						</div>
+					</div>
+				</div>
+			</div>
 	      <div class="container">
 	        <div class="row">
 	          <div class="col-md-8">
@@ -405,7 +414,6 @@
 
 
 	          <div class="col-md-4 sidebar ftco-animate">
-
 	            <div class="sidebar-box ftco-animate">
 	              <div class="">
 	                <h3>Курсы валют</h3>
