--- a/trim/single-service.html
+++ b/trim/single-service.html
@@ -106,7 +106,7 @@
                         <span class="mr-2">
                             <a href="index.html">Главная страница</a></span> 
                             <span class="mr-2">
-                            <a href="index.html">Клиентам & Партнерам</a></span> 
+                            <a href="services.html">Клиентам & Партнерам</a></span>
                             <span>Оплата и рассрочка</span>
                     </p>
               </div>
@@ -116,8 +116,20 @@
     <!-- End Header Slide Parallax -->
 
 	    <section class="ftco-section ftco-degree-bg">
+			<div class="container">
+				<div class="row ftco-animate">
+					<div class="col-md-12 no-gutters mb-3 ftco-animate breadcrumbs-custom">
+						<div class="pt-3 pb-3 ">
+							<span><a href="index.html">Главная</a> / </span>
+							<span><a href="services.html">Клиентам & Партнерам</a> / </span>
+							<span>Оплата и рассрочка</span>
+						</div>
+					</div>
+				</div>
+			</div>
 	      <div class="container">
 	        <div class="row">
+
 	          <div class="col-md-8 ftco-animate">
 	            <h2 class="mb-3">10 Tips For The Traveler</h2>
 	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
