--- a/trim/single-catalog.html
+++ b/trim/single-catalog.html
@@ -118,6 +118,17 @@
 </div>
 
 <section  class="ftco-section">
+    <div class="container">
+        <div class="row ftco-animate">
+            <div class="col-md-12 no-gutters mb-3 ftco-animate breadcrumbs-custom">
+                <div class="pt-3 pb-3" style="" >
+                    <span ><a href="index.html">Главная </a></span><span>/</span>
+                    <span><a href="catalog.html">Каталог</a> /</span>
+                    <span>Кухня cleaf</span>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container-wrap">
         <div class="row justify-content-center mb-4 no-gutters">
             <div class="col-md-10 heading-section ftco-animate text-center">
