--- a/trim/index.html
+++ b/trim/index.html
@@ -75,7 +75,7 @@
                                             
                                             <ul class="sub-menu-main">
                                                     <li class="nav-item">
-                                                         <a href="data.html" class="nav-link">Кухни</a>
+                                                         <a href="kuhni.html" class="nav-link">Кухни</a>
                                                     </li>
                                                      <li class="nav-item">
                                                         <a href="#" class="nav-link">Шкафы-купе</a>
@@ -1015,59 +1015,146 @@
 </div>
          
         <!-- OffCanvas Menu Start -->
-                <aside class="offcanvas-navigation" id="offcanvasnav">
+    <section>
+         <aside class="offcanvas-navigation" id="offcanvasnav">
+
                     <div class="offcanvas-navigation__inner">
-                        <a href="" class="btn-close">
-                            <i class="oi oi-x"></i>
-                            <span class="sr-only">Close Offcanvas Navigtion</span>
-                        </a>
+                       <!-- LOGO -->
+                        <div class="logo-cavnas" >
+                            <div>
+                                <span class="namefirm">
+                                    <i class="icon-quote-left"></i>
+                                        Ателье мебели СВ-Купе
+                                    <i class="icon-quote-right"></i></span>
+                            </div>
+                        </div>
+                        <!-- button close -->
+                        <div class="close-button">
+                            <a href="" class="btn-close" style="font-size: 36px;">
+                                <i class="icon-cancel"></i>
+                                <span class="sr-only">Close Offcanvas Navigtion</span>
+                            </a>
+                        </div>
+
                         <div class="offcanvas-navigation__top">
-                            <ul class="offcanvas-menu">
+                                <ul class="offcanvas-menu">
+                                    <li class="nav-item"><a href="index.html" >Главная</a></li>
+                                    <li class="nav-item"><a href="about.html" >О компании</a></li>
                                     <li class="nav-item has-children" >
-                                          <span class="menu-expand">
-                                                <i class="icon-chevron-down"></i>
-                                            </span>
-                                        <a href="index.html" >Home</a>
+                                                <span class="menu-expand">
+                                                    <i class="icon-chevron-down"></i>
+                                                </span>
+                                        <a href="catalog.html">Каталог</a>
                                         <ul class="sub-menu">
                                             <li>
-                                                <a href="data.html">DATA</a>
+                                                <a href="kuhni.html">Кухни</a>
                                             </li>
-                                             <li>
-                                                <a href="contacts.html">CONT</a>
+                                            <li>
+                                                <a href="#">Шкафы</a>
                                             </li>
-                                             <li>
-                                                <a href="link.html">Link</a>
+                                            <li>
+                                                <a href="#">Офисная мебель</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Комоды</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Гардеробные</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Ванные комнаты</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Столы</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Детские комнаты</a>
                                             </li>
                                         </ul>
                                     </li>
+                                        <li class="nav-item"><a href="gallery.html" >Клиента & Партнерам</a></li>
+                                        <li class="nav-item"><a href="blog.html" >Блог</a></li>
+                                        <li class="nav-item"><a href="contact.html">Контакты</a></li>
+                                </ul>
+                        </div>
 
-                                    <li class="nav-item has-children" >
-                                            <span class="menu-expand">
-                                                <i class="icon-chevron-down"></i>
-                                            </span>
-                                        <a href="about.html" >About</a>
-                                                <ul class="sub-menu">
-                                                    <li>
-                                                        <a href="#">Link</a>
-                                                    </li>
-                                                     <li>
-                                                        <a href="#">Link</a>
-                                                    </li>
-                                                     <li>
-                                                        <a href="#">Link</a>
-                                                    </li>
-                                                </ul>
-                                    </li>
-                                    <li class="nav-item"><a href="services.html" >Services &amp; Pricing</a></li>
-                                    <li class="nav-item"><a href="gallery.html" >Gallery</a></li>
-                                    <li class="nav-item"><a href="blog.html" >Blog</a></li>
-                                    <li class="nav-item"><a href="contacts.html">Contact</a></li>
+                        <div class="off-con">
+                            <p class="namefirm">Связаться с нами</p>
+                            <ul class="offcanvas-menu " >
+                                <li>
+                                    <a href="tel://+375297925779"><span class=" icon-phone"></span>
+                                        +375(29)792-57-79</a>
+                                </li>
+                                <li>
+                                    <a href="tel://+375295506565">
+                                        <span class=" icon-phone"></span>
+                                            +375(29)550-65-65</a>
+                                </li>
+                                <li><a href="mailto:sv-ceh@tut.by">
+                                    <span class=" icon-envelope"></span>
+                                        sv-ceh@tut.by</a>
+                                </li>
                             </ul>
+
                         </div>
                     </div>
                 </aside>
+    </section>
         <!-- OffCanvas Menu End -->
 
+        <!-- SubMenu for Catalog Offcavnas-->
+    <section>
+        <aside class="offcanvas-submenu-navigation" id="offcanvasnav">
+            <div class="offcanvas-navigation__inner">
+                <!-- LOGO -->
+                <div class="logo-cavnas" >
+                    <div>
+                        <span class="namefirm">КУХНИ</span>
+                    </div>
+                </div>
+                <!-- button close -->
+                <div class="close-button">
+                    <a href="" class="btn-close" style="font-size: 36px;">
+                        <i class="icon-cancel"></i>
+                        <span class="sr-only">Close Offcanvas Navigtion</span>
+                    </a>
+                </div>
+
+                <div class="offcanvas-navigation__top">
+                    <ul class="offcanvas-menu">
+                        <li class="nav-item"><a href="index.html">Угловые кухни</a></li>
+                        <li class="nav-item"><a href="about.html">Прямые кухни</a></li>
+                        <li class="nav-item has-children" >
+                            <a href="catalog.html">Кухни с ДСП</a>
+                            <ul class="">
+                                <li>
+                                    <a href="#">Egger</a>
+                                </li>
+                                <li>
+                                    <a href="#">Boyard</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="gallery.html">Кухни с остравом</a></li>
+                        <li class="nav-item"><a href="blog.html">Белые кухни</a></li>
+                        <li class="nav-item"><a href="contact.html">Кухни из мдф</a></li>
+                        <li class="nav-item">
+                            <a href="contact.html">Маленькие кухни</a>
+                            <ul class="">
+                                <li>
+                                    <a href="#">На дачу</a>
+                                </li>
+                                <li>
+                                    <a href="#">В квартиру</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </aside>
+    </section>
+        <!-- END -->
 
         <!-- Qicuk View Modal End -->
             <!-- Global Overlay Start -->
@@ -1075,10 +1162,20 @@
             <!-- Global Overlay -->
 
         <!--Scroll to Top Start -->
-        <a href="#" class = "scroll-to-top">
-            <i class="icon-angle-double-up"></i>
-        </a>
+        <div  class = "scroll-to-top">
+            <a href="#">
+                <i class="icon-angle-double-up"></i>
+            </a>
+        </div>
         <!--Scroll to Top END -->
+
+        <!--SubMenu Offcavnas -->
+        <div  class = "submenu-offcavnas">
+            <a href="#">
+                <i class="icon-menu"></i>
+            </a>
+        </div>
+        <!--End SubMenu Offcavnas -->
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
