--- a/trim/single-catalog.html
+++ b/trim/single-catalog.html
@@ -124,6 +124,7 @@
                 <div class="pt-3 pb-3" style="" >
                     <span ><a href="index.html">Главная </a></span><span>/</span>
                     <span><a href="catalog.html">Каталог</a> /</span>
+                    <span><a href="catalog.html">Кухни</a> /</span>
                     <span>Кухня cleaf</span>
                 </div>
             </div>
