--- a/trim/kuhni.html
+++ b/trim/kuhni.html
@@ -417,6 +417,61 @@
 
 
             <div class="col-md-4 sidebar ftco-animate">
+
+                <div class="sidebar-box ftco-animate ">
+                    <div class="categories ">
+                        <h3>Разделы</h3>
+                        <ul class="">
+                            <li class="nav-item"><a href="kuhni.html">Угловые кухни<span>(12)</span></a></li>
+                            <li class="nav-item"><a href="about.html">Прямые кухни<span>(12)</span></a></li>
+                            <li class="nav-item has-children">
+                                <a href="2.html">Кухни с ДСП<span>(2)</span></a>
+                                <ul class="">
+                                    <li><a href="#">Boyard<span>(3)</span></a></li>
+                                    <li class="nav-item has-children">
+                                        <a href="egge2r.html">Egger<span>(4)</span></a>
+                                            <ul  class="">
+                                                <li class="nav-item has-children">
+                                                    <a href ="egger.html">EGGER<span>(8)</span></a>
+                                                        <ul class="">
+                                                            <li>
+                                                                <a href="aks.html">AKS<span>(9)</span></a>
+                                                            </li>
+                                                        </ul>
+                                                </li>
+                                            </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item"><a href="gallery.html">Кухни с остравом Кухни с остравом<span>(18)</span></a></li>
+                            <li class="nav-item"><a href="blog.html">Белые кухни<span>(8)</span></a></li>
+                            <li class="nav-item"><a href="contact.html">Кухни из мдф<span>(10)</span></a></li>
+                            <li class="nav-item">
+                                <a href="contact.html">Маленькие кухни<span>(3)</span></a>
+                                <ul class="">
+                                    <li>
+                                        <a href="#">На дачу<span>(6)</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="#">В квартиру<span>(9)</span></a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="sidebar-box ftco-animate">
+                    <div class="categories">
+                        <h3>Каталог</h3>
+                        <li><a href="#">Кухни <span>(12)</span></a></li>
+                        <li><a href="#">Шкафы <span>(22)</span></a></li>
+                        <li><a href="#">Комоды <span>(37)</span></a></li>
+                        <li><a href="#">Гостиные <span>(42)</span></a></li>
+                        <li><a href="#">Прихожие <span>(14)</span></a></li>
+                        <li><a href="#">Лофт <span>(140)</span></a></li>
+                        <li><a href="#">Офисная мебель <span>(140)</span></a></li>
+                    </div>
+                </div>
                 <div class="sidebar-box ftco-animate">
                     <div class="">
                         <h3>Курсы валют</h3>
@@ -448,18 +503,7 @@
 
 
 
-                <div class="sidebar-box ftco-animate">
-                    <div class="categories">
-                        <h3>Каталог</h3>
-                        <li><a href="#">Кухни <span>(12)</span></a></li>
-                        <li><a href="#">Шкафы <span>(22)</span></a></li>
-                        <li><a href="#">Комоды <span>(37)</span></a></li>
-                        <li><a href="#">Гостиные <span>(42)</span></a></li>
-                        <li><a href="#">Прихожие <span>(14)</span></a></li>
-                        <li><a href="#">Лофт <span>(140)</span></a></li>
-                        <li><a href="#">Офисная мебель <span>(140)</span></a></li>
-                    </div>
-                </div>
+
 
                 <div class="sidebar-box ftco-animate">
                     <h3>Инфо</h3>
@@ -721,9 +765,11 @@
 <!-- Global Overlay -->
 
 <!--Scroll to Top Start -->
-<a href="#" class = "scroll-to-top">
-    <i class="icon-angle-double-up"></i>
-</a>
+<div  class = "scroll-to-top">
+    <a href="#">
+        <i class="icon-angle-double-up"></i>
+    </a>
+</div>
 <!--Scroll to Top END -->
 <!-- SubMenu for Catalog Offcavnas-->
 <section>
@@ -780,9 +826,9 @@
 </section>
 <!-- END -->
 <!--SubMenu Offcavnas -->
-<div  class = "submenu-offcavnas">
+<div  class = "submenu-offcavnas ">
     <a href="#">
-        <i class="icon-menu"></i>
+        <i class="icon-filter_list"></i>
     </a>
 </div>
 <!--End SubMenu Offcavnas -->
